[gd_scene load_steps=3 format=3 uid="uid://cx3m1fecta1u4"]

[ext_resource type="Script" path="res://скрипты/debug_character_control.gd" id="1_7e0en"]
[ext_resource type="Texture2D" uid="uid://5q7rs7jvtu8o" path="res://refresh.svg" id="2_2e6ob"]

[node name="debug_character_control" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -702.0
offset_bottom = -473.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("1_7e0en")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="main_container" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Stats_contaner" type="VBoxContainer" parent="PanelContainer/VBoxContainer/main_container"]
layout_mode = 2

[node name="Refresh_button" type="Button" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2
text = "REFRESH"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Peer_id_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/HBoxContainer"]
layout_mode = 2
text = "player ID"

[node name="Peer_id_OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/HBoxContainer"]
layout_mode = 2

[node name="peer_id_to_name_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Class_hContaier6" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Class_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Class_hContaier6"]
layout_mode = 2
text = "Class"

[node name="Class_label_OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Class_hContaier6"]
layout_mode = 2

[node name="Strenght_hContaier" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Strength_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Strenght_hContaier"]
layout_mode = 2
text = "Strenght"

[node name="Strength_label_OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Strenght_hContaier"]
layout_mode = 2

[node name="Endurance_hContaier2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Endurance_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Endurance_hContaier2"]
layout_mode = 2
text = "Endurance"

[node name="Endurance_label_OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Endurance_hContaier2"]
layout_mode = 2

[node name="Agility_hContaier3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Agility_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Agility_hContaier3"]
layout_mode = 2
text = "Agility"

[node name="Agility_label_OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Agility_hContaier3"]
layout_mode = 2

[node name="Mana_hContaier4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Magic_attack_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Mana_hContaier4"]
layout_mode = 2
text = "Magic"

[node name="Magic_attack_label_OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Mana_hContaier4"]
layout_mode = 2

[node name="Magical_attack_check_box" type="CheckButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Mana_hContaier4"]
layout_mode = 2
text = "atk"

[node name="Luck_hContaier5" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="Luck_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Luck_hContaier5"]
layout_mode = 2
text = "Luck"

[node name="Luck_label_OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/Luck_hContaier5"]
layout_mode = 2

[node name="HP_hContaier6" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner"]
layout_mode = 2

[node name="HP_label" type="Label" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/HP_hContaier6"]
layout_mode = 2
text = "HP
"

[node name="HP_LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/main_container/Stats_contaner/HP_hContaier6"]
layout_mode = 2
virtual_keyboard_type = 4

[node name="Skills_raw_text_edit" type="TextEdit" parent="PanelContainer/VBoxContainer/main_container"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
placeholder_text = "{\"Name\":\"ATK Up\", \"Duration\":3,\"Power\":3}"
wrap_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/main_container"]
layout_mode = 2

[node name="use_skill_raw_edit" type="TextEdit" parent="PanelContainer/VBoxContainer/main_container/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "{\"Buffs\":[{\"Name\":\"Def Down X\",\"Duration\":3,\"Power\":3}],\"Cast\":\"self\"}"
wrap_mode = 1

[node name="use_skill_Button" type="Button" parent="PanelContainer/VBoxContainer/main_container/VBoxContainer"]
layout_mode = 2
text = "Use"

[node name="Dmg_container" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_container/VBoxContainer"]
layout_mode = 2

[node name="dmg_Label" type="Label" parent="PanelContainer/VBoxContainer/main_container/VBoxContainer/Dmg_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dmg:"

[node name="dmg_refresh_button" type="Button" parent="PanelContainer/VBoxContainer/main_container/VBoxContainer/Dmg_container"]
layout_mode = 2
theme_override_constants/icon_max_width = 20
icon = ExtResource("2_2e6ob")

[node name="Apply_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "APPLY"

[node name="erorr_label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
clip_text = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/main_container/Stats_contaner/Refresh_button" to="." method="_on_refresh_button_pressed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/main_container/Stats_contaner/HBoxContainer/Peer_id_OptionButton" to="." method="_on_peer_id_option_button_item_selected"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/main_container/Stats_contaner/Mana_hContaier4/Magical_attack_check_box" to="." method="_on_magical_attack_check_box_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/main_container/VBoxContainer/use_skill_Button" to="." method="_on_use_skill_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/main_container/VBoxContainer/Dmg_container/dmg_refresh_button" to="." method="_on_dmg_refresh_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Apply_Button" to="." method="_on_apply_button_pressed"]
